--- a/GoAndroid/res/layout/activity_main.xml
+++ b/GoAndroid/res/layout/activity_main.xml
@@ -13,31 +13,56 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView1"
+    <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/go9" />
-
-    <LinearLayout
+        android:orientation="vertical" >
+        
+        <TextView 
+            android:id="@+id/nb_case"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Veuillez sélectionner la taille du plateau"
+            android:textColor="#000"
+            android:textSize="30dp"/>
+        
+        <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:id="@+id/button1"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        
+        <Button 
+            android:id="@+id/neuf_case"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
+            android:text="9"
+            android:onClick="plateau_neuf"
             android:layout_weight="1"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button2"
+            />
+        
+        <Button 
+            android:id="@+id/neuf_case"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
+            android:text="13"
+            android:onClick="plateau_treize"
             android:layout_weight="1"
-            android:text="Button" />
-
+            />
+        
+        <Button 
+            android:id="@+id/neuf_case"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:text="19"
+            android:onClick="plateau_dixneuf"
+            android:layout_weight="1"
+            />        
+        
+        </LinearLayout>
+        
     </LinearLayout>
+
+    
 
 </LinearLayout>
