placement des pions et affichage du joueur en cours

--- a/GoAndroid/res/layout/plateau_neuf.xml
+++ b/GoAndroid/res/layout/plateau_neuf.xml
@@ -9,7 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="120dp" >
 
-       
+       <TextView 
+            android:id="@+id/tour_joueur"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center"
+            android:text="Joueur Noir"
+            android:textColor="#000"
+            android:textSize="40dp"/>
 
     </LinearLayout>
 
