--- a/GoAndroid/res/layout/plateau_neuf.xml
+++ b/GoAndroid/res/layout/plateau_neuf.xml
@@ -39,11 +39,12 @@
             android:text="Button" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/passer"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Passer le tour"
+            android:onClick="passer_tour" />
 
     </LinearLayout>
 
