--- a/GoAndroid/res/layout/activity_main.xml
+++ b/GoAndroid/res/layout/activity_main.xml
@@ -3,65 +3,50 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" 
-    android:background="@drawable/herbe">
-	
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp" >
+    android:background="@drawable/herbe"
+    android:paddingTop="50dp"
+    android:paddingBottom="50dp">
 
-       
-
-    </LinearLayout>
-
-    <LinearLayout 
+               
+        <!-- LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-        
-        <TextView 
-            android:id="@+id/nb_case"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="Veuillez sélectionner la taille du plateau"
-            android:textColor="#000"
-            android:textSize="30dp"/>
-        
-        <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="vertical"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp" -->
         
         <Button 
             android:id="@+id/neuf_case"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:text="9"
+            android:background="@drawable/bouton_9"
+            android:layout_margin="20dp"
             android:onClick="plateau_neuf"
             android:layout_weight="1"
             />
         
         <Button 
-            android:id="@+id/neuf_case"
+            android:id="@+id/treize_case"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:text="13"
+            android:background="@drawable/bouton_13"
+            android:layout_margin="20dp"
             android:onClick="plateau_treize"
             android:layout_weight="1"
             />
         
         <Button 
-            android:id="@+id/neuf_case"
+            android:id="@+id/treize_case"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:text="19"
+            android:background="@drawable/bouton_19"
+            android:layout_margin="20dp"
             android:onClick="plateau_dixneuf"
             android:layout_weight="1"
             />        
         
-        </LinearLayout>
         
-    </LinearLayout>
+    <!--  /LinearLayout-->
 
     
 
