commit affichage des scors + retour à la page d'accueil quand on ferme une partie + récupération du jour à qui c'est le tour de jouer au chargement d'une partie

--- a/GoAndroid/res/layout/plateau_neuf.xml
+++ b/GoAndroid/res/layout/plateau_neuf.xml
@@ -32,11 +32,12 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/retour_arriere"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Annuler"
+            android:onClick="annuler_action" />
 
         <Button
             android:id="@+id/passer"
