--- a/GoAndroid/res/layout/menuplateau.xml
+++ b/GoAndroid/res/layout/menuplateau.xml
@@ -11,8 +11,8 @@
             android:id="@+id/neuf_case"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:background="@drawable/bouton_9"
-            android:layout_margin="20dp"
+            android:background="@drawable/bouton_9_btn"
+            android:layout_margin="10dp"
             android:onClick="plateau_neuf"
             android:layout_weight="1"
             />
@@ -21,8 +21,8 @@
             android:id="@+id/treize_case"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:background="@drawable/bouton_13"
-            android:layout_margin="20dp"
+            android:background="@drawable/bouton_13_btn"
+            android:layout_margin="10dp"
             android:onClick="plateau_treize"
             android:layout_weight="1"
             />
@@ -31,8 +31,8 @@
             android:id="@+id/dixneuf_case"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:background="@drawable/bouton_19"
-            android:layout_margin="20dp"
+            android:background="@drawable/bouton_19_btn"
+            android:layout_margin="10dp"
             android:onClick="plateau_dixneuf"
             android:layout_weight="1"
             />        
