--- a/GoAndroid/res/layout/plateau_neuf.xml
+++ b/GoAndroid/res/layout/plateau_neuf.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:text="Annuler"
+            android:background="@drawable/annuler_btn"
             android:onClick="annuler_action" />
 
         <Button
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:text="Passer le tour"
+            android:background="@drawable/passer_tour_btn"
             android:onClick="passer_tour" />
 
     </LinearLayout>
